--- a/public/argdown.css
+++ b/public/argdown.css
@@ -1,3 +1,14 @@
+/* Custom */
+
+@font-face {
+  font-family: 'ArgVu Sans Mono Regular';
+  src: url(/ArgVuSansMono-Regular-8.2.otf) format("opentype");
+}
+
+.language-argdown {
+  text-align: left;
+}
+
 /* From @argdown/core/dist/plugins/argdown.css */
 
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700');
