--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,5 @@
+/********** Stock Elm **********/
+
 /*
   elm-hot creates an additional div wrapper around the app to make HMR possible.
   This could break styling in development mode if you are using Elm UI.
@@ -5,22 +7,59 @@
   More context in the issue:
     https://github.com/halfzebra/create-elm-app/issues/320
 */
-[data-elm-hot="true"] {
+[data-elm-hot='true'] {
   height: inherit;
 }
 
 body {
-  font-family: 'Source Sans Pro', 'Trebuchet MS', 'Lucida Grande', 'Bitstream Vera Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Source Sans Pro', 'Trebuchet MS', 'Lucida Grande', 'Bitstream Vera Sans',
+    'Helvetica Neue', sans-serif;
   margin: 0;
   text-align: center;
   color: #293c4b;
 }
 
-h1 {
+/* h1 {
   font-size: 30px;
-}
+} */
 
 img {
   margin: 20px 0;
   max-width: 200px;
+}
+
+/********** Custom **********/
+@import url('vendor/argdown-map.css');
+@import url('vendor/argdown.css');
+
+.page-header {
+  margin: 0.5em;
+}
+
+div.row {
+  margin-bottom: 10px;
+}
+
+.language-argdown {
+  text-align: left;
+}
+
+.markdown-page {
+  margin-left: 10%;
+  margin-right: 10%;
+  text-align: left;
+  margin-top: 2em;
+}
+
+.markdown-page h1 {
+  text-align: center;
+}
+
+.config-button {
+  margin: 10px;
+}
+
+figure.argdown-figure {
+  margin-top: 0;
+  margin-bottom: 0;
 }
