--- a/src/main.css
+++ b/src/main.css
@@ -32,12 +32,13 @@ img {
 @import url('vendor/argdown-map.css');
 @import url('vendor/argdown.css');
 
-.page-header {
-  margin: 0.5em;
+.page-content {
+  margin-top: 1em;
+  margin-bottom: 3em;
 }
 
 div.row {
-  margin-bottom: 10px;
+  margin: 1em;
 }
 
 .language-argdown {
@@ -48,7 +49,7 @@ div.row {
   margin-left: 10%;
   margin-right: 10%;
   text-align: left;
-  margin-top: 2em;
+  margin-top: 1em;
 }
 
 .markdown-page h1 {
@@ -56,10 +57,17 @@ div.row {
 }
 
 .config-button {
-  margin: 10px;
+  margin: 0.5em;
 }
 
 figure.argdown-figure {
   margin-top: 0;
   margin-bottom: 0;
+  --argdown-button-bg-color: var(--dark);
+  --argdown-button-bg-hover-color: var(--primary);
+  --argdown-button-border-bottom-color: var(--primary);
+}
+
+.argdown-figure figcaption {
+  font-family: inherit;
 }
